--- a/web/styles.css
+++ b/web/styles.css
@@ -206,7 +206,9 @@ body {
 }
 
 .debStatusButton {
-    margin-right: 15px;
+    margin-right: 5px;
+    width: 85px;
+    padding: 6px 6px;
 }
 
 .debJumpMem {
