Connect slider to worker
  Fix timings resets

--- a/web/styles.css
+++ b/web/styles.css
@@ -31,6 +31,11 @@ body {
     margin: 0px 0px;
 }
 
+#mainGameBoyState {
+    white-space: nowrap;
+    overflow: hidden;
+}
+
 /* ************************************************************************** */
 /* PANELS GLOBAL ************************************************************ */
 /* ************************************************************************** */
