--- a/web/styles.css
+++ b/web/styles.css
@@ -48,10 +48,10 @@ body {
     margin-left: auto;
     margin-right: auto;
     background-color: rgba(0, 71, 171, 0.25);
-    max-width: 1100px;
+    max-width: 1200px;
 }
 
-#row-option {
+#row-option, #row-key-mapping {
     border: 1px solid black;
     border-width: 0px 0px 1px 0px;
 }
@@ -60,7 +60,7 @@ body {
     border-width: 1px 0px 0px 0px;
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1220px) {
     #container-main > .closable {
         border: 2px solid black;
         border-radius: 5px;
