Add labels above canvas to show key spam

--- a/web/styles.css
+++ b/web/styles.css
@@ -358,6 +358,14 @@ body {
 /* ************************************************************************** */
 /* CANVAS ******************************************************************* */
 /* ************************************************************************** */
+#spamming-label-container {
+    height: 24px;
+}
+#spamming-label-container > span {
+    height: 24px;
+    padding: 5px 12px;
+    font-size: 14px;
+}
 .canvas {
     width: 500px;
     height: 500px;
