--- a/web/styles.css
+++ b/web/styles.css
@@ -666,28 +666,38 @@ body {
     left: 71px;
 }
 
-.cart-ram-bis .list-group {
+.ft-chip .list-group {
     z-index: 100;
     position: absolute;
+    text-align: left;
     width: 200px;
-    left: calc(166px + 11px);
     top: calc(13px + 6px);
+}
+
+.cart-ram-bis .list-group {
+    left: calc(166px + 11px);
 }
 
 .cart-ss-bis .list-group {
-    z-index: 100;
-    position: absolute;
-    width: 200px;
     left: calc(71px + 11px);
-    top: calc(13px + 6px);
 }
 
-.cart-ram-bis .list-group-item,
-.cart-ss-bis .list-group-item {
-    font-size: 14px;
+.ft-chip .list-group-item {
+    display: block;
+    position: relative;
+    width: 200px;
+    padding: 4px 0;
+    padding-left: 9px;
+    font-size: 13px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: bold;
+    color: black;
 }
+
+.ft-chip .list-group-item:hover {
+    background-color: #f5f5f5;
+}
+
 
 /* CHIP SOCKET ************************************************************** */
 /* RAM **************************************** */
