--- a/web/styles.css
+++ b/web/styles.css
@@ -670,7 +670,6 @@ body {
     z-index: 100;
     position: absolute;
     text-align: left;
-    width: 200px;
     top: calc(13px + 6px);
 }
 
@@ -685,7 +684,7 @@ body {
 .ft-chip .list-group-item {
     display: block;
     position: relative;
-    width: 200px;
+    min-width: 200px;
     padding: 4px 0;
     padding-left: 9px;
     font-size: 13px;
@@ -694,8 +693,16 @@ body {
     color: black;
 }
 
-.ft-chip .list-group-item:hover {
+.ft-chip .ft-clickable:hover {
     background-color: #f5f5f5;
+}
+
+.ft-chip .ft-title {
+    font-size: 15px;
+    color: #555555;
+    padding-left: 8px;
+    padding-right: 8px;
+    text-align: center;
 }
 
 
