--- a/web/styles.css
+++ b/web/styles.css
@@ -689,8 +689,12 @@ body {
     padding-left: 9px;
     font-size: 13px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-weight: bold;
+    font-weight: lighter;
     color: black;
+}
+
+.ft-chip .ft-clickable {
+    font-weight: bold;
 }
 
 .ft-chip .ft-clickable:hover {
@@ -699,9 +703,10 @@ body {
 
 .ft-chip .ft-title {
     font-size: 15px;
+    font-weight: bold;
     color: #555555;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: 5px;
+    padding-right: 5px;
     text-align: center;
 }
 
