--- a/web/styles.css
+++ b/web/styles.css
@@ -2,7 +2,6 @@
 /* ************************************************************************** */
 /* BODY ********************************************************************* */
 /* ************************************************************************** */
-
 body {
     background: url('images/seamless_rough_plastic_texture_nes_by_blueamnesiac-d4mxqci.png') repeat;
     color: white;
@@ -25,7 +24,6 @@ body {
 /* ************************************************************************** */
 /* NAV ********************************************************************** */
 /* ************************************************************************** */
-
 #debButtonToggle {
     width: 100%;
     margin: 0px 0px;
@@ -39,7 +37,6 @@ body {
 /* ************************************************************************** */
 /* PANELS GLOBAL ************************************************************ */
 /* ************************************************************************** */
-
 #container-main {
     padding: 0 1px;
 }
@@ -79,25 +76,15 @@ body {
 /* SLIDERS ****************************************************************** */
 /* MY CLASSES ********************************* */
 #row-option > div {
-    /* padding: */
-    /* padding-right: 30px; */
-}
-
-#row-option > div {
     height: 50px;
     padding: 0px;
-    /* padding-left: 5px; */
     padding-right: 30px;
 }
 
 @media only screen and (min-width: 768px) {
 
     #row-option > .ft-left {
-        /* height: 50px; */
-        /* padding: 0px; */
-        /* padding-left: 5px; */
         padding-right: 15px;
-        /* background-color: green; */
     }
 
 }
@@ -107,7 +94,6 @@ body {
     margin: 0px auto;
     padding-top: 5px;
     padding-bottom: 5px;
-    /* padding-right: 27px; */
     padding-left: 13px;
     height: 50px;
     width: calc(100% - 90px);
@@ -135,60 +121,9 @@ body {
     opacity: 1;
 }
 
-/* SPEED SLIDER ******************************* */
-#speed-slider-cont {
-}
-
-#mainSpeedText {
-}
-
-#mainSpeedSlider {
-}
-
-/* CANVAS SCALE SLIDER ************************ */
-.canvas-scale-part.slider-cont {
-}
-
-.canvas-scale-part.slider-text {
-}
-
-.canvas-scale-part.slider-cont > .slider {
-}
-
-/* CANVAS SMOOTH SLIDER *********************** */
-.canvas-smooth-part.slider-cont {
-}
-
-.canvas-smooth-part.slider-text {
-}
-
-.canvas-smooth-part.slider-cont > .slider {
-}
-
-/* GAMEBOY MODE SLIDER ************************ */
-.gameboy-mode-part.slider-cont {
-}
-
-.gameboy-mode-part.slider-text {
-}
-
-.gameboy-mode-part.slider-cont > .slider {
-}
-
-/* GAMEBOY FPS SLIDER ************************* */
-.gameboy-fps-part.slider-cont {
-}
-
-.gameboy-fps-part.slider-text {
-}
-
-.gameboy-fps-part.slider-cont > .slider {
-}
-
 /* ************************************************************************** */
 /* KEY MAPPING ************************************************************** */
 /* ************************************************************************** */
-
 #mapping-button-container > button {
     width: 31%;
     height: 26px;
@@ -208,7 +143,6 @@ body {
     color: GhostWhite;
     margin-top: 0;
     margin-bottom: 6px;
-    /* background-color: red; */
 }
 #row-key-mapping th {
     background-color: rgba(81, 144, 165, 1.0); /* strong blue */
@@ -224,7 +158,6 @@ body {
 }
 #row-key-mapping td {
     color: #005B79;
-    /* padding: 0; */
 }
 #row-key-mapping td:first-child {
     font-size: 12px;
@@ -238,7 +171,6 @@ body {
     padding: 2px 5px;
     overflow: hidden;
 }
-
 
 #joypad-table thead th:first-child {
     width: 65px;
@@ -303,21 +235,21 @@ body {
 
 .debColClockSpan {
     white-space: nowrap;
-    /* background-color: red; */
     display: inline-block;
 }
 
 @media only screen and (max-width: 450px) {
+
     .debColClockSpan {
         margin: 0 auto;
         display: block;
-        /* background-color: green; */
         width: 215px !important;
         text-align: left;
     }
     .debColClockSpan span {
         float: right;
     }
+
 }
 
 /* DEB - BODY - BUTTONS ***************************************************** */
@@ -325,27 +257,18 @@ body {
     margin-top: 5px;
 }
 
-#debColButtons {
-    /* padding: 0 !important; */
-    /* margin: 0 !important; */
-    /* position:relative; */
-    /* text-align: left; */
-    /* vertical-align: middle; */
-}
-
 .debStatusButton {
     margin: 2px 2px;
     width: 85px;
     padding: 5px 6px;
-    /* padding: 0 !important; */
-    /* margin: 0 !important; */
-
 }
 
 @media only screen and (min-width: 610px) {
+
     #debColButtons > div {
         display: inline-block;
     }
+
 }
 
 /* DEB - BODY - REGISTER **************************************************** */
@@ -355,7 +278,6 @@ body {
 }
 
 #debColRegisters span.label {
-    /* color: red; */
     padding: 3px 5px;
     margin: 0px;
     font-size: 9px;
@@ -366,24 +288,22 @@ body {
 }
 
 #debColRegisters > table > tbody > tr:first-child > td:first-child {
-    /* margin-bottom: 0px; */
     padding: 5px 0px;
 }
 
 #debColRegisters > table > tbody > tr:first-child > td:first-child > div {
-    /* background-color: green; */
     display: inline-block;
 }
 @media only screen and (max-width: 992px) {
 
     #debColRegisters > table > tbody > tr:first-child > td:first-child > div {
         display: block;
-        /* background-color: red; */
     }
 
     #debColRegisters > table > tbody > tr:first-child > td:first-child > div:first-child {
         margin-bottom: 3px;
     }
+
 }
 
 /* DEB - BODY - INSTRUCTION FLOW ******************************************** */
@@ -402,7 +322,6 @@ body {
     padding: 0px;
     font-size: 14px;
     width: calc((100% - 24px) / 12 * 2);
-    /* color: red; */
 }
 
 #memExpJumpPREV, #memExpJumpNEXT {
@@ -440,7 +359,6 @@ body {
 /* DEB - BODY - MEMORY REGISTERS ******************************************** */
 #debColMemRegisters h4 {
     text-align: left;
-    /* background-color: red; */
 }
 .debMemRegTd {
     white-space: nowrap;
@@ -603,85 +521,83 @@ body {
 .gameboy-cartridge table, .cart-ram-bis, .cart-ss-bis {
     border: 0px;
 }
-
 /* CHIP ********************************************************************* */
-.cart-ram-bis,
-.cart-ss-bis {
+.ft-chip {
     height: 49px;
-    padding-top: 13px;
     padding-left: 11px;
     padding-right: 14px;
     cursor: pointer;
 }
-
 .cart-ss-bis {
     padding-top: 14px;
     background: url(images/chip_sprites.png) -182px 0px;
     width: 86px;
 }
-
-.cart-ss-bis.over {
-    background: url(images/chip_sprites.png) -182px -49px;
-}
-
-
 .cart-ram-bis {
+    padding-top: 13px;
     background: url(images/chip_sprites.png) 0px 0px;
     width: 182px;
 }
 
+.cart-ss-bis.over {
+    background: url(images/chip_sprites.png) -182px -49px;
+}
 .cart-ram-bis.over {
     background: url(images/chip_sprites.png) 0px -49px;
 }
 
-.cart-ram-bis > .text,
-.cart-ss-bis > .text {
+
+.ft-chip > .text {
     color: rgba(255, 255, 255, 0.7);
     white-space: nowrap;
     text-align: center;
     overflow: hidden;
-    font-size: 13px;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-weight: bold;
 }
-
-.cart-ss-bis .text {
+.cart-ss-bis > .text {
     font-size: 11px;
 }
+.cart-ram-bis > .text {
+    font-size: 13px;
+}
 
-.cart-ram-bis button,
-.cart-ss-bis button {
+
+.ft-chip > button {
     display: block;
-    overflow: hidden;
     position: absolute;
     width: 11px;
-    background-color: rgba(255, 0, 0, 0.0);
+    background-color: rgba(0, 0, 0, 0.0);
     height: 18px;
-    left: 166px;
     top: 13px;
     border: 0px;
 }
-
-.cart-ss-bis button {
+.cart-ss-bis > button {
     left: 71px;
 }
+.cart-ram-bis > button {
+    left: 166px;
+}
 
-.ft-chip .list-group {
-    z-index: 100;
-    position: absolute;
-    text-align: left;
+
+.ft-chip > .ft-dropdown {
     top: calc(13px + 6px);
 }
-
-.cart-ram-bis .list-group {
+.cart-ram-bis > .ft-dropdown {
     left: calc(166px + 11px);
 }
-
-.cart-ss-bis .list-group {
+.cart-ss-bis > .ft-dropdown {
     left: calc(71px + 11px);
 }
 
-.ft-chip .list-group-item {
+/* DROPDOWN ***************************************************************** */
+.ft-dropdown {
+    z-index: 100;
+    position: absolute;
+    text-align: left;
+}
+
+.ft-dropdown > .list-group-item {
     display: block;
     position: relative;
     min-width: 200px;
@@ -693,23 +609,21 @@ body {
     color: black;
 }
 
-.ft-chip .ft-clickable {
+.ft-dropdown > .ft-clickable {
     font-weight: bold;
 }
 
-.ft-chip .ft-clickable:hover {
+.ft-dropdown > .ft-clickable:hover {
     background-color: #f5f5f5;
 }
 
-.ft-chip .ft-title {
-    font-size: 15px;
+.ft-dropdown > .ft-title {
+    font-size: 14px;
     font-weight: bold;
     color: #555555;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding: 7px 5px;
     text-align: center;
 }
-
 
 /* CHIP SOCKET ************************************************************** */
 /* RAM **************************************** */
@@ -758,7 +672,6 @@ body {
 /* ************************************************************************** */
 /* ALERTS ******************************************************************* */
 /* ************************************************************************** */
-
 #mainAlertBox {
     width: 500xp
 }
@@ -774,7 +687,6 @@ body {
 /* ************************************************************************** */
 /* FOOTER ******************************************************************* */
 /* ************************************************************************** */
-
 footer {
     border: 1px solid black;
     height: 20px;
